--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-server": "nodemon app.js",
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "express-session": "^1.17.3"
   },
   "devDependencies": {
+    "jquery": "^3.6.1",
     "nodemon": "^2.0.20"
   }
 }
